--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.1.4"
+    "koa-views": "^6.1.4",
+    "mongoose": "^5.2.12"
   }
 }
